assets/main/sass/layout/_ghost.scss
// Main
// --------------------------------------------

#intro {
    max-width: 800px;
    margin: 0 auto;
}

#header .logo.image {
    padding: 0;
    border: none;
}

#header .logo.image img {
    height: 75px;
    transform: none !important;
}

.content {
    max-width: 700px;
    margin: 0 auto;
}

.has-serif-title .content [id] {
    font-family: _font(family);
}

.has-sans-body .content > blockquote,
.has-sans-body .content > ol,
.has-sans-body .content > ul,
.has-sans-body .content > dl,
.has-sans-body .content > p {
    font-family: _font(family-heading);
}

// Pagination
// --------------------------------------------

// Couple of alignment fixes cause we're not
// using page numbers, just prev/next
.pagination {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

.pagination .page {
    padding: 0 20px;
    border-color: transparent !important;
    color: #222 !important;;
}

.spacer {
    width: 160px;
}


// Tag Archive
// --------------------------------------------

.tag-header,
.tag-header p {
    text-align: center;
}


// Author Archive
// --------------------------------------------

.author-header {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.author-profile-image {
    flex-shrink: 0;
    margin: 0 0 20px 0;
    width: 100px;
    height: 100px;
    box-shadow: rgba(255,255,255,0.1) 0 0 0 6px;
    display: block;
    background: #222;
    border-radius: 100%;

    object-fit: cover;
}

.author-header h1 {
    margin-bottom: 1rem;
}

.author-meta {
    display: flex;
    align-items: center;
}

.author-meta .icon,
.author-meta .bull {
    padding: 5px 10px;
}

.author-location:before {
    margin-right: 10px;
}

// Author Box
// --------------------------------------------

.post-footer {
    margin: 4rem auto 0;
    max-width: 700px;
}

.authors {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin: 0 -40px;
}

.author-box  {
    flex: 1 1 300px;
    display: inline-flex;
    align-items: flex-start;
    padding: 5px 20px;
    margin: 0 20px 20px;
    border: none;
}

.author-box:hover {
    color: #212931 !important;
}

.author-box:hover .author-box-name {
    color: var(--color-primary);
    transition: color 0.2s ease;
}

.author-box .author-profile-image {
    height: 60px;
    width: 60px;
    margin-right: 20px;
}

.author-box-content {
    display: flex;
    flex-direction: column;
}

.author-box-label {
    font-family: _font(family-heading);
    font-size: 0.7rem;
    line-height: 1em;
    font-weight: 300;
    text-transform: uppercase;
    color: #999;
}

.author-box-name {
    margin: 3px 0;
    font-size: 1.3rem;
    line-height: 1.2em;
    transition: color 0.5s ease;
}

.author-box p {
    margin: 0;
    font-size: 0.9rem;
    line-height: 1.5em;
}

.kg-image {
    max-width: 100%;
}

// Content
// --------------------------------------------

// Markdown images and videos
.content p > img, .content p > video {
    max-width: 100%;
}

.kg-card {
    margin: 0 0 2rem 0;
}

.kg-embed-card {
    display: flex;
    flex-direction: column;
    align-items: center;
    min-width: 100%;
}

.kg-image {
    width: 100%;
}

figcaption {
    margin-top: 1rem;
    font-size: 0.8rem;
    line-height: 1.4em;
    text-align: center;
}

.kg-width-wide {
    position: relative;
    margin-left: -6rem;
    margin-right: -6rem;
    width: calc(100% + 12rem);

    @include breakpoint('<=large') {
        margin-left: -4rem;
        margin-right: -4rem;
        width: calc(100% + 8rem);
    }
    @include breakpoint('<=medium') {
        margin-left: -2rem;
        margin-right: -2rem;
        width: calc(100% + 4rem);
    }
    @include breakpoint('<=small') {
        margin-left: 0;
        margin-right: 0;
        width: 100%;
    }
}

.kg-width-full {
    position: relative;
    margin-left: -14.1rem;
    margin-right: -14.1rem;
    width: calc(100% + 28.25rem);

    @include breakpoint('<=large') {
        margin-left: -8rem;
        margin-right: -8rem;
        width: calc(100% + 16rem);
    }
    @include breakpoint('<=medium') {
        margin-left: -4rem;
        margin-right: -4rem;
        width: calc(100% + 8rem);
    }
    @include breakpoint('<=small') {
        margin-left: -2rem;
        margin-right: -2rem;
        width: calc(100% + 4rem);
    }
}

.kg-gallery-container {
    display: flex;
    flex-direction: column;
    margin-left: -6rem;
    margin-right: -6rem;
    width: calc(100% + 12rem);

    @include breakpoint('<=large') {
        margin-left: -4rem;
        margin-right: -4rem;
        width: calc(100% + 8rem);
    }
    @include breakpoint('<=medium') {
        margin-left: -2rem;
        margin-right: -2rem;
        width: calc(100% + 4rem);
    }
    @include breakpoint('<=small') {
        margin-left: 0;
        margin-right: 0;
        width: 100%;
    }
}

.kg-gallery-row {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.kg-gallery-image img {
    display: block;
    margin: 0;
    width: 100%;
    height: 100%;
}

.kg-gallery-row:not(:first-of-type) {
    margin: 0.75em 0 0 0;
}

.kg-gallery-image:not(:first-of-type) {
    margin: 0 0 0 0.75em;
}

.kg-gallery-card + .kg-image-card.kg-width-wide,
.kg-gallery-card + .kg-gallery-card,
.kg-image-card.kg-width-wide + .kg-gallery-card,
.kg-image-card.kg-width-wide + .kg-image-card.kg-width-wide {
    margin: -2.25em 0 3em;
}

.kg-bookmark-card {
    width: 100%;
    position: relative;
}

.kg-bookmark-container {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row-reverse;
    color: currentColor;
    font-family: inherit;
    text-decoration: none;
    border: 1px solid rgba(0, 0, 0, 0.1);
}

.kg-bookmark-container:hover {
    text-decoration: none;
}

.kg-bookmark-content {
    flex-basis: 0;
    flex-grow: 999;
    padding: 20px;
    order: 1;
}

.kg-bookmark-title {
    font-weight: 600;
}

.kg-bookmark-metadata,
.kg-bookmark-description {
    margin-top: .5em;
}

.kg-bookmark-metadata {
    align-items: center;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.kg-bookmark-description {
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 2;
    overflow: hidden;
}

.kg-bookmark-icon {
    display: inline-block;
    width: 1em;
    height: 1em;
    vertical-align: text-bottom;
    margin-right: .5em;
    margin-bottom: .05em;
}

.kg-bookmark-thumbnail {
    display: flex;
    flex-basis: 24rem;
    flex-grow: 1;
}

.kg-bookmark-thumbnail img {
    max-width: 100%;
    height: auto;
    vertical-align: bottom;
    object-fit: cover;
}

.kg-bookmark-author {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.kg-bookmark-publisher::before {
    content: "•";
    margin: 0 .5em;
}

// Error Pages
// --------------------------------------------


.error-wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    width: 100%;
    padding-bottom: 12vw !important;
    text-align: center;
}

.error-description {
    text-align: center;
}

.error-code {
    margin: 0;
}

